# stadiumpulse-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  dependencies.py  logging_config.py  main.py  schemas.py  security.py  sustainability.py
app/accessibility/: __init__.py  commentary.py
app/llm/: __init__.py  base.py  gemini_client.py  mock_client.py
app/multilingual/: __init__.py  faq.py
app/navigation/: __init__.py  venue_map.py  wayfinder.py
app/ops/: __init__.py  copilot.py
app/rag/: __init__.py  loader.py  store.py
app/rag/knowledge/: anti_discrimination.md  crowd_control.md  evacuation.md  infrastructure_failure.md  medical_emergency.md  security_threat.md  vip_protocol.md  weather_emergency.md
app/routers/: __init__.py  accessibility.py  dashboard.py  multilingual.py  navigation.py  ops.py  sustainability.py  transit.py  workforce.py
app/sensors/: __init__.py  simulator.py
app/transit/: __init__.py  data.py  router.py
app/workforce/: __init__.py  demo_data.py  genetic_algorithm.py  messaging.py  models.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_ga.py  test_multilingual.py  test_navigation.py  test_rag.py  test_sustainability.py  test_transit.py
