[project]
name = "stadiumpulse-ai"
version = "2.0.0"
description = "GenAI operations copilot for Smart Stadiums & Tournament Operations, FIFA World Cup 2026"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET", "C4", "PTH", "T20", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
